--- a/index.html
+++ b/index.html
@@ -16,13 +16,22 @@
       .bio-box a {
         color: green;
       }
-      .ms-box {
-        background-color: azure;
+      .bio-box a {
+        color: pink;
       }
-      #revenant {
-        background-color: orange;
+      .alert {
+        background: red;
       }
-   </style>
+      #exec-bio.alert {
+        background: blue;
+      }
+      .bio-box {
+        width: 50%;
+      }
+      .bio-box {
+        width: 75%;
+      }
+  </style>
   </head>
   <body>
     <h1>I'm an h1</h1>
@@ -38,16 +47,16 @@
       </li>
     </ul>
     <h2>I'm an h2</h2>
-    <div id="exec-bio" class="bio-box ms-box">
+    <div id="exec-bio" class="bio-box alert">
       <a href="http://example.com/">I'm a link</a>
     </div>
-    <div class="bio-box ms-box">
+    <div class="bio-box">
       <a href="http://example.com/">I'm a link</a>
     </div>
-    <div class="bio-box ms-box">
+    <div class="bio-box">
       <a href="http://example.com/">I'm a link</a>
     </div>
-    <div class="bio-box ms-box">
+    <div class="bio-box alert">
       <a href="http://example.com/">I'm a link</a>
     </div>
   </body>
