--- a/index.html
+++ b/index.html
@@ -6,47 +6,66 @@
     <style>
       /* GLOBAL STYLES */
       a {
-        color: #e7a0ef;
+        color: #f00;
       }
-      h2 {
-        font-size: 30px;
+      html, body {
+        margin: 0;
+        padding: 0;
       }
+      h1 {
+        font-size: 7vw;
+        margin-top: 0;
+      }
+    
+      /* HERO STYLES */
 
-     /* BIO STYLES */
-      .bio-wrapper {
-        font-size: 24px;
-      }
-      .bio-box {
-        border: 10px solid black;
-        font-size: 1em;
-        padding: 20px;
-        width: 50%;
-      }
-      .bio-copy a {
-        color: green;
-        font-size: 1em;
+      .full-hero {
+        background-color: #c7dbfc;
+        height: 50vw;
+        width: 75vw;
       }
 
       /* SOCIAL STYLES */
       .social-link {
-        background: rgba(150, 150, 150, 0.2);
+        background: rgba(150, 150, 150, 0.5);
         color: blue;
       }
+    
+      /* BIO STYLES */
+      .bio-wrapper {
+        font-size: 24px;
+      }
+      .bio-box {
+        border: 1px solid black;
+        font-size: 1rem;
+        width: 50%;
+      }
+      .bio-box h3 {
+        font-size: 1.5em;
+      }
+      .bio-copy {
+        font-size: 1em;
+      }
+      .bio-copy a {
+        color: green;
+      }
     </style>
-  </head>
+ </head>
   <body>
+    <div class="full-hero hero-home">
     <h1 class="social-link">I'm an h1</h1>
-    <ul>
-      <li>
-        <a href="http://example.com/" class="social-link">Link</a>
-      </li>
-      <li>
-        <a href="http://example.com/" class="social-link">Link</a>
-      </li>
-      <li>
-        <a href="http://example.com/" class="social-link">Link</a>
-      </li>
-    </ul>
+      <ul>
+        <li>
+          <a href="http://example.com/" class="social-link">Link</a>
+        </li>
+        <li>
+          <a href="http://example.com/" class="social-link">Link</a>
+        </li>
+        <li>
+          <a href="http://example.com/" class="social-link">Link</a>
+        </li>
+      </ul>
+    </div>
     <h2>I'm an h2</h2>
     <div class="bio-wrapper">
       <div class="bio-box">
