--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta charset="utf-8">
     <style>
       /* GLOBAL STYLES */
+      html, body {
+        margin: 0;
+        padding: 0;
+      }
       h1 {
         font-size: 7vw;
         margin-top: 0;
@@ -22,42 +26,46 @@
       /* SOCIAL STYLES */
       .social-link {
         background: rgba(150, 150, 150, 0.5);
-        color: blue;
+        border-radius: 99px;
+        box-sizing: border-box;
+        color: #fff;
         display: inline-block;
-        height: 36px;
-        margin: auto;
+        font-family: helvetica, arial, sans;
+        font-size: 1rem;
+        font-weight: bold;
+        height: 2.5em;
+        line-height: 1;
+        padding-top: 0.85em;
+        text-align: center;
+        text-decoration: none;
+        vertical-align: middle;
+        width: 2.5em;
       }
       .social-list {
         list-style: none;
         padding: 0;
-        text-align: right;
+        text-align: center;
       }
-      .social-list >li {
+      .social-list > li {
         display: inline-block;
+        margin: 0 0.5em;
       }
 
       /* BIO STYLES */
       .bio-wrapper {
         font-size: 24px;
-        margin: 0 auto 5%;
+        margin: auto;
         max-width: 960px;
         overflow: hidden;
       }
-      .bio-wrapper:after {
-        visibility: hidden;
-        display: block;
-        font-size: 0;
-        content: " ";
-        clear: left;
-        height: 0;
-      }
       .bio-box {
         border: 1px solid black;
+        border-color: black black red;
         box-sizing: border-box;
         float: left;
         font-size: 1rem;
         margin: 40px 1% 0;
-        padding: 2%;
+        padding: 0 2% 2%;
         width: 23%;
       }
       .bio-box h3 {
@@ -69,11 +77,9 @@
       .bio-box img {
         width: 100%;
       }
-      .bio-box > a {
-        color: #c68bf9;
-      }
       .bio-copy {
         font-size: 1em;
+        line-height: 1.5;
       }
       .bio-copy a {
         color: green;
@@ -85,13 +91,13 @@
       <h1>I'm an h1</h1>
       <ul class="social-list">
         <li>
-          <a href="http://example.com/" class="social-link">Link1</a>
+          <a href="http://example.com/" class="social-link">Fb</a>
         </li>
         <li>
-          <a href="http://example.com/" class="social-link">Link2</a>
+          <a href="http://example.com/" class="social-link">Tw</a>
         </li>
         <li>
-          <a href="http://example.com/" class="social-link">Link3</a>
+          <a href="http://example.com/" class="social-link">Gh</a>
         </li>
       </ul>
     </div>
@@ -100,7 +106,7 @@
       <div class="bio-box">
         <img src="http://placekitten.com/g/400/400">
         <h3>Michael Hartl</h3>
-        <a href="http://twitter.com/mhartl" class="social-link">here</a>
+        <a href="http://twitter.com/mhartl" class="social-link">Tw</a>
         <div class="bio-copy">
           <p>
             Known for his dazzling charm, rapier wit, and unrivaled humility,
@@ -108,8 +114,11 @@
             <a href="http://railstutorial.org/">Ruby on Rails
             Tutorial</a> and principal author of the
             <a href="https://learnenough.com/">
-            Learn Enough to Be Dangerous</a> introductory sequence. Michael
-            is also notorious as the founder of
+            Learn Enough to Be Dangerous</a> introductory sequence.
+          </p>
+
+          <p>
+            Michael is also notorious as the founder of
             <a href="http://tauday.com/">Tau Day</a> and author of
             <a href="http://tauday.com/tau-manifesto"><em>The Tau
             Manifesto</em></a>, but rumors that he's secretly a supervillain
@@ -120,7 +129,7 @@
       <div class="bio-box">
         <img src="http://placekitten.com/g/400/400">
         <h3>Lee Donahoe</h3>
-        <a href="https://twitter.com/leedonahoe" class="social-link">here</a>
+        <a href="https://twitter.com/leedonahoe" class="social-link">Tw</a>
         <div class="bio-copy">
           <p>
             When he's not literally swimming with sharks or hunting powder
@@ -133,7 +142,7 @@
       <div class="bio-box">
         <img src="http://placekitten.com/g/400/400">
         <h3>Nick Merwin</h3>
-        <a href="https://twitter.com/nickmerwin" class="social-link">here</a>
+        <a href="https://twitter.com/nickmerwin" class="social-link">Tw</a>
         <div class="bio-copy">
           <p>
             You may have seen him shredding guitar live with Capital Cities on
@@ -144,7 +153,6 @@
         </div>
       </div>
       <div class="bio-box">
-        <img src="http://placekitten.com/g/400/400">
         <h3>??</h3>
         <p>
           The Future
